--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <body>
         <section class="gallery">
             <div class="gallery-cursor">
-                <div class="cursor-clip"></div>
                 <div class="cursor-wrapper">
                     <div class="cursor-left">
                         <div></div>
@@ -93,11 +92,9 @@
             </div>
         </section>
 
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
-            integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="/dist/jquery.js"></script>
+        <script src="/dist/jquery-ui.js"></script>
+        <script src="/dist/gsap.min.js"></script>
         <script type="module" src="/js/main.js"></script>
     </body>
 
