--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
         <script src="/dist/jquery.js"></script>
         <script src="/dist/jquery-ui.js"></script>
+        <script src="/dist/jquery.ui.touch-punch.js"></script>
         <script src="/dist/gsap.min.js"></script>
         <script type="module" src="/js/main.js"></script>
     </body>
