--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
-        <section class="gallery">
+    <body class="rtl">
+        <section class="ask_gallery">
             <div class="gallery-cursor">
                 <div class="cursor-wrapper">
                     <div class="cursor-left">
